/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package model.another;

/**
 *
 * @author Dell
 */
public class StaticDemo {
    public static void main(String[] args) {
        EmployeeData.foo();
        SqlRecord.foo();
        
    }
}
