@startuml
abstract class model.DBModel
annotation java.lang.Override
class java.sql.Connection
class java.sql.DriverManager
class java.sql.PreparedStatement
class java.sql.ResultSet
class java.sql.SQLException
class java.util.ArrayList
class java.util.logging.Level
class java.util.logging.Logger
class model.Department
class model.EmpProj
class model.Employee
class model.ExtendedProject
class model.Project
class model.another.EmployeeData
class model.another.SqlRecord
class model.another.StaticDemo
interface model.DML
interface model.DQL
model.DBModel ..> java.sql.Connection
model.DBModel ..> java.sql.DriverManager
model.DBModel ..> java.sql.PreparedStatement
model.DBModel ..> java.sql.SQLException
model.DBModel ..> java.util.ArrayList
model.Department --|> model.DBModel
model.Department ..> java.lang.Override
model.Department ..> java.sql.PreparedStatement
model.Department ..> java.sql.ResultSet
model.Department ..> java.sql.SQLException
model.Department ..> java.util.ArrayList
model.Department --|> model.DML
model.EmpProj --|> model.DBModel
model.EmpProj ..> java.lang.Override
model.EmpProj ..> java.sql.PreparedStatement
model.EmpProj ..> java.sql.ResultSet
model.EmpProj ..> java.sql.SQLException
model.EmpProj ..> java.util.ArrayList
model.EmpProj --|> model.DML
model.Employee --|> model.DBModel
model.Employee ..> java.lang.Override
model.Employee ..> java.sql.PreparedStatement
model.Employee ..> java.sql.ResultSet
model.Employee ..> java.sql.SQLException
model.Employee ..> java.util.ArrayList
model.Employee --|> model.DML
model.ExtendedProject --|> model.DBModel
model.ExtendedProject ..> java.lang.Override
model.ExtendedProject ..> java.sql.ResultSet
model.ExtendedProject ..> java.sql.SQLException
model.ExtendedProject ..> java.util.ArrayList
model.Project --|> model.DBModel
model.Project ..> java.lang.Override
model.Project ..> java.sql.ResultSet
model.Project ..> java.sql.SQLException
model.Project ..> java.util.ArrayList
model.Project --|> model.DML
model.Project --|> model.DQL
model.another.EmployeeData ..> java.lang.Override
model.another.EmployeeData ..> java.util.logging.Level
model.another.EmployeeData ..> java.util.logging.Logger
model.another.EmployeeData ..> model.Employee
model.another.EmployeeData --|> model.another.SqlRecord
model.DML ..> java.sql.SQLException
model.DQL ..> java.sql.SQLException
model.DQL ..> java.util.ArrayList
@enduml